images of activity

--- a/_posts/thesis_chapters/2024-3-4-Design.md
+++ b/_posts/thesis_chapters/2024-3-4-Design.md
@@ -199,7 +199,7 @@ There is a tension where he is hesitant about where to place code.
 Screen shot of the menu of choices. -->
 
 
-## Vignette illustrating an example of game making activity
+## Detailed description of dimensions of game making activity
 
 <!--
 #### Code Playgrounds
@@ -220,7 +220,7 @@ The vignette is included as a principle appendix.
 
 https://docs.google.com/document/d/1vYeVxYaRMTWPDOHwC4DEGYAkGPRIDX7wLiz0l8b7LWc/edit
 
-### Description of levels of activity illustrated using the vignette
+### Description of interacting systems of activity illustrated using the vignette
 
 In line with the process outlined in chapter 3, the following sections outline different scopes of activity, at times using detail from the vignette above, to describe the activity of participants and to introduce tensions between system elements which are explored in this chapter.
 
@@ -238,15 +238,21 @@ Subsequent analysis of the identified activity systems allows both the researche
 
 #### Environmental factors and objectives
 
-In line with socio-cultural approaches is it important to situate the context of the learning environment within wider systems of activity. I have selected several relevant systems and represented them in an illustration 4.x  below.
-
-LINK THESE MOTIVATIONS TO THE INTRODUCTION AND THE LITERATURE REVIEW
+In socio-cultural approaches is it important to situate the context of the learning environment within wider systems of activity. In line with Engestrom's concept of shared object explored in the previous chapter [@engestrom_expansive_2001], I have selected several relevant systems and represented them in an illustration 4.x  below.
 
 These include: research goals on the part of the researcher/ participant; desire to create a useful learning experience on the part of student helpers; learning computing skills and concepts as a home education project; participating with other home educators in a creative environment and thus building team and communication skills; and finally a broad aim of fun on the part of the children participants.
 
 <!-- NOTE THERE IS A MISMATCH BETWEEN DIAGRAM AND THE OBJECTIVES - CHOOSE ONE - AND MAKE IT CLEAR -->
 
-![Illustration 4.x - Broad Environmental Activity Systems  ](./Pictures/At_dia_3_v1.png){width=95%}
+![Illustration 4.x - Broad Environmental Activity Systems  ](./Pictures/At_dia_3_v2.png){width=95%}
+
+In this research I take the approach of treating this shared object as an activity system in its own right.
+
+<!-- NOTE MOVE PREVIOUS Chapter?  -->
+Lecusay takes a similar approach [@lecusay_telementoring_2015]  and describes the shared object as an ideocultural hybrid which develops into its own activity system.
+
+
+
 
 <!-- NOTE - CAN ADD THE OBJECTIVES / LEADING ACTIVITIES INTO THE ARROWS ON THE DIAGRAM -->
 <!-- While the limited example above of Toby's activity illustrates fun, additional data from interviews with this child and family back the broad goals above. [develop - perhaps an appendix or quotes] -->
@@ -266,9 +272,9 @@ These include: research goals on the part of the researcher/ participant; desire
 Table 4.x.  Tools used in larger-scoped objective involving the wider community of notice coders collectively making separate games. -->
 
 
-#### Larger objective - Making games for an audience
+#### Making games for an audience
 
-Moving beyond wider activity systems, the overarching activity system of the game making programme that the participants signed up for has a shared objective of making entertaining and educational games for an audience to play.
+The broader activity system of the game making programme that the participants signed up for has a shared objective of making entertaining and educational games for an audience to play.
 
 <!-- NOTE - what is the difference between objective and outcome -->
 
@@ -288,7 +294,14 @@ While the broad aim of making a game to share is tacitly agreed through particip
 NOTE - More on large scope in AT terms? What is needed here? -->
 
 
-#### Mid-level objective - Constructing a game feature by feature
+#### Constructing a game feature by feature
+
+Within the activity system of making a game
+
+There is a strong case to make for the sub-projects of implementing GDP as a key unit of analysis. Barab and colleagues justify smaller units in their study observing emerging practices in a technology rich learning environment [@barab_using_2002].
+
+
+
 
 At this scope of activity, participants work on the game code and and audio and graphical assets to achieve the broad objective is to alter and add new features to the game using tools available in the learning environment.  
 
@@ -317,6 +330,10 @@ By this stage, the process of collecting a user generated list of features and t
 <!-- However within that wider objective there may be a variety of goals depending on the participant. In this case Toby's goal is addresses the challenge and variety of the game playing experience. -->
 
 <!-- Toby builds his competence in the process of comparing the own code to the code example to work out what code is new and relevant to the desired behaviour. -->
+
+In addition game design patterns emerged as a shared object. DEVELOP THIS IDEA HERE OR IN DISCUSSION.
+
+![Illustration 4.x - Shared object of implementing GDP  ](./Pictures/At_dia_4_v1.png){width=95%}
 
 Overall activity at this level was driven by learners setting goals and requesting help to implement game features. By this stage of the process, Toby is able to browse a collection of game design patterns and use diverse of tools, resources and processes. Participants developed preferred approaches and tool choices especially in accessing help when adding a new feature to their game. In the vignette above I outline the two main sources of help at the level of adding a new feature to the game: "Here’s the tutorial and there’s the examples of code". In the course of the vignette above, Toby chose to access only a code example of the desired game behaviour. He did not, as some in the group were doing in this session, use the tutorial which provided more descriptive, step-by-step guidance. Other participants relied only on direct verbal help from myself or other participants (like Toby) to help them progress. A later section of this chapter details the different supporting documentation guiding participation in game making practices. Chapter five then explores activity occurring at this scope in more detail with a greater focus on emerging concepts as tools.
 
