--- a/_posts/thesis_chapters/2024-3-4-Design.md
+++ b/_posts/thesis_chapters/2024-3-4-Design.md
@@ -8,23 +8,25 @@ layout: post
 categories: chapter
 title: 4. Exploration of the Formative Learning Design Process
 ---
-
 -   [Exploration of the Formative Learning Design
     Process](#exploration-of-the-formative-learning-design-process)
     -   [Research Questions - Feb 2024](#research-questions---feb-2024)
     -   [A note on style](#a-note-on-style)
     -   [Chapter Introduction](#chapter-introduction)
-    -   [Vignette illustrating an example of game making
-        activity](#vignette-illustrating-an-example-of-game-making-activity)
-        -   [Table of Vignette](#table-of-vignette)
-        -   [Description of levels of activity illustrated using the
-            vignette](#description-of-levels-of-activity-illustrated-using-the-vignette)
+    -   [Detailed description of dimensions of game making
+        activity](#detailed-description-of-dimensions-of-game-making-activity)
+        -   [Illustrative vignette one participants activity indicating
+            general activity of
+            participants](#illustrative-vignette-one-participants-activity-indicating-general-activity-of-participants)
+        -   [Description of interacting systems of activity illustrated
+            using the
+            vignette](#description-of-interacting-systems-of-activity-illustrated-using-the-vignette)
             -   [Environmental factors and
                 objectives](#environmental-factors-and-objectives)
-            -   [Larger objective - Making games for an
-                audience](#larger-objective---making-games-for-an-audience)
-            -   [Mid-level objective - Constructing a game feature by
-                feature](#mid-level-objective---constructing-a-game-feature-by-feature)
+            -   [Making games for an
+                audience](#making-games-for-an-audience)
+            -   [Constructing a game feature by
+                feature](#constructing-a-game-feature-by-feature)
             -   [Smaller objectives and actions - Implementing discrete
                 code and design
                 structures](#smaller-objectives-and-actions---implementing-discrete-code-and-design-structures)
@@ -35,14 +37,6 @@ title: 4. Exploration of the Formative Learning Design Process
             tools](#tensions-due-to-lack-of-access-and-familiarity-to-game-programming-tools)
             -   [Design choices of the starter game
                 template](#design-choices-of-the-starter-game-template)
-                -   [Structural design of the game
-                    template](#structural-design-of-the-game-template)
-                -   [Variable editing for player
-                    movement](#variable-editing-for-player-movement)
-                -   [Level design and
-                    prototyping](#level-design-and-prototyping)
-                -   [Background colour and a pixel
-                    art](#background-colour-and-a-pixel-art)
             -   [Observations on the game template and core
                 tools](#observations-on-the-game-template-and-core-tools)
         -   [Design adaptations to facilitate novice use of a code
@@ -77,7 +71,7 @@ title: 4. Exploration of the Formative Learning Design Process
 ## Research Questions - Feb 2024
 
 ~1. What pedagogical tools and processes are available to support novices to overcome barriers to participation in game coding processes?~
-1. What barriers to participation in game coding processes emerged in the research processes and what were the resulting responses?
+1. What ~barriers~ contradictions in participation in game coding processes emerged in the research processes and what were the resulting responses?
 2. How can learners build agency in an evolving community of game makers?
 3. How can game design patterns support the development of coding practices with novices?
 
@@ -274,7 +268,7 @@ Table 4.x.  Tools used in larger-scoped objective involving the wider community 
 
 #### Making games for an audience
 
-The broader activity system of the game making programme that the participants signed up for has a shared objective of making entertaining and educational games for an audience to play.
+The broader activity system whose object was the game making programme had a shared objective of making entertaining and educational games for an audience to play.  
 
 <!-- NOTE - what is the difference between objective and outcome -->
 
@@ -287,6 +281,9 @@ There are diverse end audiences for the games. The final target audience are stu
 ![Carrot eater game with an self made arcade box made from cardboard](./Pictures/carroteater3.jpg){width=75%}
 
 While the broad aim of making a game to share is tacitly agreed through participation, there are also diverse motivations stemming from environmental factors in the interrelated actors in this activity which bleed into the tensions which emerge at this level. In the vignette and surrounding data, Toby pays close attention to the challenge and variety of the game playing experience for his projected audience of players. In the vignette above, I draw the participants attention to the showcasing of their games to an external audience. Toby begins the session playing his own game. During the course of this session he invites many other group members to play his game. He initiates and responds to conversations around the difficultly of the game he has designed.
+
+
+While the programme had a shared objective of making a game, there were tensions brought by the cultural factors and other objectives imported from other activity systems. This chapter explores those tensions.
 
 
 <!-- In the vignette of Toby's activity this wider objective is present in the facilitator orientation at the start which references this audience -  _the Monday after we can play our games and we can share them with students. We can make the students frustrated when they can’t beat our games_. At the end of the vignette text, one of the student helpers also imagines this audience playing the game of Toby.    -->
@@ -402,11 +399,17 @@ The term conflict here is used to describe a more serious break down of activity
 
 The processes here aligns with AT approach of formative interventions in that the surfacing of tensions due to changes in the learning design over time are examined. I chart the detail of the evolution of resources and other responses used helps illuminate broader, systemic issues concerns in the overall activity [@barab_using_2002].
 
-These tensions are outlined from a cultural perspective, the first tension address issues of identity and interventions designed to mitigate cultural barriers of participation.
+These tensions are outlined from a cultural perspective,
 
-The second conflict addresses contradictions in the tool set of the early design.
+It explores areas of tensions and barriers.  
+NOTE - (be clearer on terms still)
 
-The third conflict examines contradictions which stimulated the development of authoring tools and supporting documentation.
+
+- contradictions in the tool set of the early design.
+
+- contradictions which stimulated the development of authoring tools and supporting documentation.
+
+- issues of identity and interventions designed to mitigate cultural barriers of participation.
 
 
 
