--- a/_posts/thesis_chapters/tocs/2024-3-4-Design.md_toc.md
+++ b/_posts/thesis_chapters/tocs/2024-3-4-Design.md_toc.md
@@ -3,17 +3,20 @@
     -   [Research Questions - Feb 2024](#research-questions---feb-2024)
     -   [A note on style](#a-note-on-style)
     -   [Chapter Introduction](#chapter-introduction)
-    -   [Vignette illustrating an example of game making
-        activity](#vignette-illustrating-an-example-of-game-making-activity)
-        -   [Table of Vignette](#table-of-vignette)
-        -   [Description of levels of activity illustrated using the
-            vignette](#description-of-levels-of-activity-illustrated-using-the-vignette)
+    -   [Detailed description of dimensions of game making
+        activity](#detailed-description-of-dimensions-of-game-making-activity)
+        -   [Illustrative vignette one participants activity indicating
+            general activity of
+            participants](#illustrative-vignette-one-participants-activity-indicating-general-activity-of-participants)
+        -   [Description of interacting systems of activity illustrated
+            using the
+            vignette](#description-of-interacting-systems-of-activity-illustrated-using-the-vignette)
             -   [Environmental factors and
                 objectives](#environmental-factors-and-objectives)
-            -   [Larger objective - Making games for an
-                audience](#larger-objective---making-games-for-an-audience)
-            -   [Mid-level objective - Constructing a game feature by
-                feature](#mid-level-objective---constructing-a-game-feature-by-feature)
+            -   [Making games for an
+                audience](#making-games-for-an-audience)
+            -   [Constructing a game feature by
+                feature](#constructing-a-game-feature-by-feature)
             -   [Smaller objectives and actions - Implementing discrete
                 code and design
                 structures](#smaller-objectives-and-actions---implementing-discrete-code-and-design-structures)
@@ -24,14 +27,6 @@
             tools](#tensions-due-to-lack-of-access-and-familiarity-to-game-programming-tools)
             -   [Design choices of the starter game
                 template](#design-choices-of-the-starter-game-template)
-                -   [Structural design of the game
-                    template](#structural-design-of-the-game-template)
-                -   [Variable editing for player
-                    movement](#variable-editing-for-player-movement)
-                -   [Level design and
-                    prototyping](#level-design-and-prototyping)
-                -   [Background colour and a pixel
-                    art](#background-colour-and-a-pixel-art)
             -   [Observations on the game template and core
                 tools](#observations-on-the-game-template-and-core-tools)
         -   [Design adaptations to facilitate novice use of a code
