--- a/_posts/thesis_chapters/tocs/2024-3-4-Design.md_toc.md
+++ b/_posts/thesis_chapters/tocs/2024-3-4-Design.md_toc.md
@@ -48,9 +48,37 @@
                 navigation](#theming-the-a-collection-of-game-design-patterns-to-aid-navigation)
         -   [Conflicts due to identity clashes and dysfunctional group
             work](#conflicts-due-to-identity-clashes-and-dysfunctional-group-work)
+    -   [Exploring the impact of a drama
+        processes](#exploring-the-impact-of-a-drama-processes)
+        -   [Vignette 4.1.a - Introducing a drama
+            process](#vignette-4.1.a---introducing-a-drama-process)
+        -   [Description of Vignette
+            4.1.a](#description-of-vignette-4.1.a)
+        -   [Vignette 4.1.b - Session reflections and secret
+            missions](#vignette-4.1.b---session-reflections-and-secret-missions)
+        -   [Description of Vignette
+            4.1.b](#description-of-vignette-4.1.b)
+        -   [Relevant observations on side missions and drama from the
+            data](#relevant-observations-on-side-missions-and-drama-from-the-data)
+        -   [Reflecting in role](#reflecting-in-role)
+        -   [Observations on written interactions with the alien in the
+            drama](#observations-on-written-interactions-with-the-alien-in-the-drama)
+            -   [Exploring documentation and accessing technical help
+                within the drama
+                frame](#exploring-documentation-and-accessing-technical-help-within-the-drama-frame)
+            -   [Playful dialogue with the aliens unrelated to game
+                making](#playful-dialogue-with-the-aliens-unrelated-to-game-making)
+        -   [Concluding remarks on process
+            drama](#concluding-remarks-on-process-drama)
+    -   [Results on key interventions of the design concerning
+        agency](#results-on-key-interventions-of-the-design-concerning-agency)
+        -   [Using Physical Maps of Missions as Game Design
+            Patterns](#using-physical-maps-of-missions-as-game-design-patterns)
+        -   [A game encouraging maker / player
+            types](#a-game-encouraging-maker-player-types)
+        -   [Use of side missions to encourage varied creative
+            practices](#use-of-side-missions-to-encourage-varied-creative-practices)
     -   [Chapter Discussion](#chapter-discussion)
-        -   [Discussion on authenticity and agency concerning tools and
-            resources](#discussion-on-authenticity-and-agency-concerning-tools-and-resources)
         -   [Summary of barriers and tensions explored in this
             chapter](#summary-of-barriers-and-tensions-explored-in-this-chapter)
         -   [Link to next chapter](#link-to-next-chapter)
