shift cultural barrier of one key family back to ch .4.

--- a/_posts/thesis_chapters/2024-3-4-Design.md
+++ b/_posts/thesis_chapters/2024-3-4-Design.md
@@ -1082,7 +1082,65 @@ To briefly summarise this dynamic using the language of 3GAT we can locate tensi
 
 This experience aligns with research in this area explored in the literature review which explore pedagogies to address barriers concerning identity and technology-driven practices [@kafai_constructionist_2015-1]. A contributing factor to this families alienation were tensions engendered by the large group size and the seriousness of end stages of coding.
 
-I have shared the crisis of this family in particular, as the process drove me to focus on and further develop inclusive cultural practices which are explored in chapter six. While this conflict is cultural in nature, it is compounded by frustrations stemming from unfamiliarity with tools and processes. In participant feedback, the  parent of this family described in the previous section indicated that it took too long before in the planning stage and called for more hands on play and use of the tools of production before being called on to make creative decisions. The parent likened this to an arts studio approach. The next section explores this related conflict in more detail.
+I  shared the crisis of this family in particular, as the process drove me to focus on and further develop inclusive cultural practices which are explored in chapter six. While this conflict is cultural in nature, it is compounded by frustrations stemming from unfamiliarity with tools and processes. In participant feedback, the  parent of this family described in the previous section indicated that it took too long before in the planning stage and called for more hands on play and use of the tools of production before being called on to make creative decisions. The parent likened this to an arts studio approach. The next section explores this related conflict in more detail.
+
+#### Barriers of identity, coding & dysfunctional group work
+
+NOTE - REALLY COMPRESS - MOVED FROM CH 6 BACK HERE
+question if DATA BECOMES PRESENT - USE AS BASIS FOR DISCUSSION /
+
+
+In chapter 4 I surfaced the conflict experiences by participants in phase one of the process where an alienation from the culture of coding prevented participation.
+
+This conflict was articulated clearly by one family in particular. In this section I explore the emerging tensions / barriers in more depth (and responses) to provide context for the following chapters sections.
+
+NOTE - MENTION SOURCE OF FAMILY FROM THE DIGITAL BRAVES ACTIVITY?
+While speculative, it may be of significance that this family had also attended an open workshop for families before this programme which used drama processes to begin to explore issues of digital tracking and give hands on coding experiences. It is possible that it was this combination of tech and non-tech activities which gave them the confidence to attend a program based around coding.  When the family withdrew, in my journal notes I reflected that the they shared of alienation from the group process occurred in a session where, due to a sense of urgency to complete games, I had omitted drama-based warm up activities. Instead as participant entered I began to support to help some participants debug some pressing code errors.
+
+
+<!-- **Participants stuck / demotivated : scope of ambition to high,  clashes of identity not hard core coders, no on-going playtesting, collaboration groups too big (transition),**
+
+For some families and individual participants there were conflicts to do with a sense of anxiety and alienation from the group coding environment and associated peer working dynamics.
+
+One family dropped out and in their exit interview they shared that at one point we looked around and just saw people doing hardcore coding and we no longer felt at home in the environment. In this emergent design, they had mostly completed asset design and narrative development and the only coding remained. I thus wanted to address the tension between completing the project and alienation from just coding.
+
+The value of playfulness is illustrated with one exit interview with a parent where they shared their reasons for leaving the program. At one stage after a week where they had missed a session, their family looked around and saw other groups involved in 'hardcore coding' and no longer felt at home. They compared this previous sessions which had more fun and group oriented activity.
+
+I was struck that his incident happened during a session where I had not played customary drama games to create an inclusive environment. The games had been omitted as I was responding to a sense of urgency coming from families to solve problems. The scarcity in facilitator time drove me to crack on supporting families to debug code errors. -->
+
+
+**Gulfs between desires and reality**
+
+While members of this family were able to engage in planing via sketching on paper and in creating pixel art, they were reliant on others to implement code changes. This was in part due to improvised group roles.
+
+The freedom of choice and imagination allowed by designing on paper and via pixel art created compounding tensions. One crisis point involved a frustration of a child who was not able to implement a feature they wanted to add to the game next:
+
+A 3d bee design of one participant which happened when there was no framework.
+
+While personal expression can facilitates engagement and motivation it can lead to conflict if desired changes are not realistic.
+
+In order to accelerate the process of making a game to fit into contextual expectations of an acceptable project timeframe, I pre-chose the genre of game to be made as a two dimensional (2D) platformer game.
+
+<!-- Based on my previous teaching experience, analysis of literature and knowledge of platform games, I pre-prepared a set of coded example and tutorials to implement a range of game design patterns. -->
+
+The incident lead me to greater reflection on ongoing measures needed to prevent participant drop out for due to cultural tensions and negative affect to the working community. These include:
+
+-   An awareness of the danger that those more confident in coding create more involved code problems that need more facilitator time, potentially making others feel less valued.
+-   A concern for the fragility of learners positive affect towards the group game making process and thus the need for initial playful starting and closing activities to be continued beyond initial sessions.
+-   The value of a stronger buy-in by participants, ideally a greater commitment to the collective making process balanced with the need for low pressure (avoiding a negative sense of obligation).
+
+
+**Narrative summary of conflict - TRANSITION TO DRAMA SCENARIO**
+
+The conflict comprised of compounding factors and resulted in a lack of desire to complete coding activities before fully engaging with them.
+
+In the initial stages some families struggled to reconcile the obstacles presented but their active participation in warm up games shows ....
+
+While many families talked of the challenge of coding, one family in particular were s
+In reflection on the session that ended their participation
+
+INSERT SOME ANALYSIS HERE BASED ON AGENCY AND AFFORDENCES OFFERED
+
 
 
 <!-- NOTE - CREATE A LINK IN CHAPTER 6 - around line 300  -->
