--- a/_posts/thesis_chapters/2024-3-5-Gdps.md
+++ b/_posts/thesis_chapters/2024-3-5-Gdps.md
@@ -1417,16 +1417,18 @@ There are challenges of the use of these short cuts and at a more general the de
 
 
 
-### Discussion on GDPs, emerging processes and learner agency
+### Discussion on GDPs
 <!-- NOTE -  REFRAMING WITH A FOCUS ON AGENCY - IDEALLY THE LATER -->
 
 The process of creating a learning design where students were able to choose from a curated set of game design patterns is covered in the design chapter of this thesis. This chapter has begun a process of exploration of the nature and evolution of agency in the practices of the participants through the varied use of GDPs. In this final section I continue to explore emerging thoughts on learner agency, the use of game design patterns, especially within the context of a collection of patterns.
 
-RECAP ON WHAT AGENCY IS HERE
+RECAP ON WHAT AGENCY IS HERE? OR NEXT CHAPTER?
 
  <!-- Using a choice of patterns when compared to instructional tutorials (previously explored in methods chapter)  -->
 
 #### GDPs used in mediational strategies and impact on participant agency
+
+WHAT IS THE FUNDAMENTAL POINT HERE AND HOW DOES IT TRANSITION TO THE NEXT CHAPTER? 
 
 GDPs are frequently used as mediational strategies [@lecusay_telementoring_2015].
 
