--- a/_posts/thesis_chapters/tocs/2024-3-4-Design.md_toc.md
+++ b/_posts/thesis_chapters/tocs/2024-3-4-Design.md_toc.md
@@ -48,6 +48,8 @@
                 navigation](#theming-the-a-collection-of-game-design-patterns-to-aid-navigation)
         -   [Conflicts due to identity clashes and dysfunctional group
             work](#conflicts-due-to-identity-clashes-and-dysfunctional-group-work)
+            -   [Barriers of identity, coding & dysfunctional group
+                work](#barriers-of-identity-coding-dysfunctional-group-work)
     -   [Exploring the impact of a drama
         processes](#exploring-the-impact-of-a-drama-processes)
         -   [Vignette 4.1.a - Introducing a drama
