--- a/_posts/thesis_chapters/tocs/2024-3-5-Gdps.md_toc.md
+++ b/_posts/thesis_chapters/tocs/2024-3-5-Gdps.md_toc.md
@@ -86,8 +86,7 @@
         design](#discussion-on-the-use-of-game-design-patterns-in-the-3m-learning-design)
         -   [Design patterns as a mid-level pedagogical
             framework](#design-patterns-as-a-mid-level-pedagogical-framework)
-        -   [Discussion on GDPs, emerging processes and learner
-            agency](#discussion-on-gdps-emerging-processes-and-learner-agency)
+        -   [Discussion on GDPs](#discussion-on-gdps)
             -   [GDPs used in mediational strategies and impact on
                 participant
                 agency](#gdps-used-in-mediational-strategies-and-impact-on-participant-agency)
