--- a/_posts/thesis_chapters/2024-3-4-Design.md
+++ b/_posts/thesis_chapters/2024-3-4-Design.md
@@ -58,6 +58,8 @@ title: 4. Exploration of the Formative Learning Design Process
                 navigation](#theming-the-a-collection-of-game-design-patterns-to-aid-navigation)
         -   [Conflicts due to identity clashes and dysfunctional group
             work](#conflicts-due-to-identity-clashes-and-dysfunctional-group-work)
+            -   [Barriers of identity, coding & dysfunctional group
+                work](#barriers-of-identity-coding-dysfunctional-group-work)
     -   [Exploring the impact of a drama
         processes](#exploring-the-impact-of-a-drama-processes)
         -   [Vignette 4.1.a - Introducing a drama
@@ -92,6 +94,7 @@ title: 4. Exploration of the Formative Learning Design Process
         -   [Summary of barriers and tensions explored in this
             chapter](#summary-of-barriers-and-tensions-explored-in-this-chapter)
         -   [Link to next chapter](#link-to-next-chapter)
+
 
 # Exploration of the Formative Learning Design Process
 
